--- a/gym-website/src/styles/styles.css
+++ b/gym-website/src/styles/styles.css
@@ -429,20 +429,11 @@ header {
   width: 100%;
 }
 
-@media (max-width: 900px) {
-  .contact-info__container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-    gap: 1em;
-  }
-  .contact-section__wrapper {
-    gap: 1em;
-  }
-  .contact-form {
-    padding: 1em;
-  }
+.info__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: column;
 }
 .info__wrapper span {
   font-size: clamp(1.75em, 4vw, 2.75em);
@@ -499,6 +490,25 @@ header {
 
 .info:not(.info:last-child) {
   margin-bottom: 1.5em;
+}
+
+.top-scroll-button__link {
+  align-self: center;
+}
+
+.top-scroll__button {
+  font-size: clamp(0.75em, 4vw, 1.25em);
+  padding: 0.5em 0.75em;
+  border: 2px solid rgb(154, 205, 50);
+  border-radius: 200px;
+  cursor: pointer;
+  filter: grayscale(1);
+  transition: 150ms ease-in-out;
+}
+
+.top-scroll__button:hover {
+  filter: grayscale(0);
+  box-shadow: 0 0 12px 1px rgb(154, 205, 50);
 }
 
 .contact-form {
@@ -563,6 +573,21 @@ footer p {
   color: rgb(154, 205, 50);
 }
 
+@media (max-width: 900px) {
+  .contact-info__container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    gap: 1em;
+  }
+  .contact-section__wrapper {
+    gap: 1em;
+  }
+  .contact-form {
+    padding: 1em;
+  }
+}
 *,
 *::before,
 *::after {
